<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_low"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_url"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn_download"
            android:layout_weight="2.5"
            android:text="开始下载"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <TextView
        android:text="选择解析格式:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.qing.rainfall_tool.component.FlowRadioGroup
        android:id="@+id/flow_radio_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/frg_default"
            android:text="@string/default_parsing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/frg_bilibili"
            android:text="@string/brand_bilibili"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/frg_youtube"
            android:text="@string/brand_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/frg_niconico"
            android:text="@string/brand_niconico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/frg_acfun"
            android:text="@string/brand_acfun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/frg_douyin"
            android:text="@string/brand_douyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/frg_kuaishou"
            android:text="@string/brand_kuaishou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.qing.rainfall_tool.component.FlowRadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:text="已下载的资源"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="资源分类"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="资源广场"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="文字教程"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="默认配置"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>