<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

<!--            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_low"
            android:orientation="vertical">

            <!--
             字体           大小,样式
             颜色           ...
             图标           ...
             主题           ...
             语言          ...
             悬浮窗口
             -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_night_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_language" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="屏幕方向(横向/纵向)" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="自动更新" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="通知设置" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/settings"

                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.64" />

                <TextView
                    android:id="@+id/arrowImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"/>

                <!--<ImageView
                    android:id="@+id/arrowImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/moreinfo_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"/>-->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_application" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_cache" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- layout_anchorGravity = bottom|right|end -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|center"
        app:srcCompat="@drawable/ic_account" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>





